# anti-gravity-phoenix-v4

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  PLANS.md  README.md  compose.fork.yml  compose.live-autonomous.yml  compose.live-canary.yml  compose.prod.yml  docker-compose.yml  release-components.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
autonomous-live-e2e/: Cargo.toml
autonomous-live-e2e/tests/: autonomous_live_e2e.rs
config/: phoenix-route-policy-v1.json  protocol_registry.example.json
contracts/: foundry.toml
dashboard/: __init__.py  app.py  requirements.txt  smoke_import.py  snapshot_model.py
deploy/: dashboard.Dockerfile  feed-ingestor.Dockerfile  fork-sandbox.Dockerfile  nats-server.conf  prelive-v5-release.example.json  release-manifest.example.json  rust.Dockerfile
docs/: AUTONOMOUS_HUNTER_A1_REVENUE_EVIDENCE.md  AUTONOMOUS_HUNTER_CONTRACTS_V1.md  AUTONOMOUS_LIVE_OPERATIONS.md  BENCHMARKS.md  CI_CD.md  CONTRACT_RISK_REGISTER.md  DEPENDENCIES.md  DEPLOYMENT.md  ENGINE_DEPENDENCY_EXHAUSTION.md  EXECUTION_READINESS.md  FORK_SANDBOX.md  GITHUB_ACTIONS_DEPENDENCIES.md  GITHUB_SETUP.md  GIT_AND_SECRET_HYGIENE.md  GIT_FLOW.md  HOT_PATH.md  LIMITATIONS.md  LIVE_READINESS_GATES.md  MONEY_PATH_SELECTIVE_PERSISTENCE_V1.md  NITRO_FEED_INTEGRATION.md  OLD_SYSTEM_AUDIT.md  OPPORTUNITY_FUNNEL.md  PHOENIX_PRELIVE_SHADOW_V5_RELEASE.md  PRELIVE_DASHBOARD.md  PRELIVE_MONEY_PATH_OBSERVABILITY.md  PRELIVE_SHADOW_CONTROL_PLANE.md  PRODUCTION_BOOTSTRAP.md  PROFITABILITY_THESIS.md  RECORDER_DURABLE_DELIVERY.md  RELEASE_AND_ROLLBACK.md  RPC_BUDGET.md  RUNBOOK.md  SECURITY.md  SHADOW_ECONOMICS.md  SHADOW_POSITIVE_ROUTE_EVIDENCE.md  SHADOW_PROFITABILITY_REPORTS.md  SHADOW_ROUTE_DISCOVERY.md  SHADOW_SECONDARY_VERIFICATION.md  STRATEGY_SELECTION.md  UNISWAP_ENTRYPOINTS.md  (+1 more)
feed-ingestor/: go.mod  go.sum
fork-sandbox/: Cargo.toml
live-executor/: Cargo.toml
live-executor/schema/: 001_live_canary.sql  002_approval_evidence.sql  003_autonomous_hunter_contracts.sql  004_autonomous_live_runtime.sql
live-executor/src/: abi.rs  approval.rs  approve_execution_request_main.rs  autonomous.rs  autonomous_live_control_main.rs  config.rs  engine.rs  lib.rs  main.rs  model.rs  rpc.rs  signer.rs  store.rs
live-executor/tests/: engine_state_machine.rs  isolated_fork.rs  postgres_nonce_recovery.rs
migration-runner/: go.mod
migrations/: 001_init.sql  002_event_signatures.sql  003_shadow_profitability_evidence.sql  004_shadow_engine_runtime.sql  005_shadow_decision_identity.sql  006_dependency_exhaustion_quarantine.sql  007_canonical_profitability_truth.sql  008_shadow_route_discovery_indexes.sql  009_profit_triggered_secondary_verification.sql  010_fork_simulation_evidence.sql  011_money_path_selective_persistence.sql
money-path-classifier/: Cargo.toml
phoenix-engine/: Cargo.toml
phoenix-engine/benches/: decision_path.rs
phoenix-engine/examples/: hunter_a1_replay.rs
phoenix-engine/src/: autonomous.rs  config.rs  engine_input.rs  engine_jetstream.rs  lib.rs  main.rs  persistence.rs  positive_route_evidence.rs  readiness.rs  rpc_evaluator.rs  runtime.rs  runtime_state.rs  shadow_positive_route_evidence_main.rs  shadow_processor.rs
phoenix-engine/src/amm/v3/: mod.rs
phoenix-engine/src/decision/: mod.rs
phoenix-engine/src/domain/: mod.rs
phoenix-engine/src/economics/: mod.rs
phoenix-engine/src/execution/: mod.rs
phoenix-engine/src/graph/: mod.rs
phoenix-engine/src/hunter/: mod.rs
phoenix-engine/src/messaging/: mod.rs
phoenix-engine/src/metrics/: mod.rs
phoenix-engine/src/opportunity/: mod.rs
phoenix-engine/src/optimizer/: mod.rs
phoenix-engine/src/origin/: mod.rs  uniswap.rs
phoenix-engine/src/profit/: mod.rs
phoenix-engine/src/simulation/: mod.rs
phoenix-engine/src/state/: mod.rs
phoenix-engine/tests/: e2e_fixtures.rs  positive_route_evidence.rs  postgres_decision_integration.rs  uniswap_origin_decoders.rs
prometheus/: prometheus.yml
proto/: phoenix.proto
recorder/: Cargo.toml
recorder/src/: dispatcher.rs  engine_outbox.rs  engine_stream.rs  ingress.rs  jetstream.rs  lib.rs  logging.rs  main.rs  metrics.rs  model.rs  persistence.rs  runtime.rs  state.rs
recorder/tests/: config_check.rs  engine_stream_integration.rs  jetstream_integration.rs  money_path_storage_benchmark.rs  postgres_outbox_integration.rs
replay/: Cargo.toml
replay/src/: evidence.rs  lib.rs  main.rs
rpc-gateway/: Cargo.toml
rpc-gateway/src/: budget.rs  cache.rs  coalescer.rs  economic.rs  hunter_state.rs  lib.rs  main.rs  metrics.rs  multicall.rs  priority.rs  providers.rs  runtime.rs  runtime_state.rs  shadow_state.rs  transport.rs
rpc-gateway/tests/: gateway_tests.rs
schemas/: phoenix-autonomous-hunter-v1.schema.json  phoenix-executor-deployment.schema.json  phoenix-prelive-v5-release.schema.json  phoenix-release-assets.schema.json  phoenix-release-manifest.schema.json  phoenix-release-provenance.schema.json  prelive-money-path-summary.schema.json  prelive-shadow-control-evidence.schema.json  release-components.schema.json
scripts/: anvil_quote_proxy.py  bootstrap-production.sh  bootstrap.sh  compose-route-registry-tests.sh  deploy-release.sh  forbidden-file-check.ps1  forbidden-file-check.sh  fork-sandbox-run.sh  fork-sandbox-validate.sh  healthcheck.sh  hunter_contracts.py  install-autonomous-live-deploy-gateway.sh  install-production-release-context.sh  install-release-assets.sh  install-shadow-deploy-gateway.sh  live-executor-isolated-fork-tests.sh  nitro-live-smoke.sh  phoenix-autonomous-live-deploy-gateway.sh  phoenix-shadow-deploy-gateway.sh  phoenix_shadow_deploy.py  prelive-money-path-report-tests.sh  prelive-money-path-report.sh  prelive-protected-maintenance-launch.sh  prelive-protected-maintenance-supervisor-tests.sh  prelive-protected-maintenance-tests.sh  prelive-protected-maintenance-unit.sh  prelive-protected-maintenance.sh  prelive-release-gate-tests.sh  prelive-shadow-contract-transition.sh  prelive-shadow-control-tests.sh  prelive-shadow-control.sh  (+45 more)
(+127 files in other folders)
