[package]
name = "phoenix-live-executor"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"

[lib]
name = "phoenix_live_executor"
path = "src/lib.rs"

[[bin]]
name = "live-executor"
path = "src/main.rs"

[[bin]]
name = "approve-execution-request"
path = "src/approve_execution_request_main.rs"

[dependencies]
alloy-consensus = { version = "=0.6.4", default-features = false, features = ["std", "k256"] }
alloy-eips = { version = "=0.6.4", default-features = false, features = ["std"] }
alloy-primitives = { version = "=0.8.11", default-features = false, features = ["std", "k256"] }
alloy-signer = "=0.6.4"
alloy-signer-local = { version = "=0.6.4", default-features = false }
async-trait = "=0.1.81"
# Direct pins keep Alloy's transitive graph within the repository Rust 1.79 contract.
base64ct = "=1.6.0"
chrono = { version = "=0.4.38", features = ["serde"] }
ethabi = "=18.0.0"
hex = "=0.4.3"
home = "=0.5.9"
libc = "=0.2.186"
primitive-types = { version = "=0.12.2", default-features = false }
proc-macro-crate = "=3.2.0"
phoenix-fork-sandbox = { path = "../fork-sandbox" }
reqwest = { version = "=0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
sha2 = "=0.10.9"
sqlx = { version = "=0.8.2", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }
thiserror = "=1.0.63"
tokio = { version = "=1.40.0", features = ["full"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "fmt", "json"] }
url = "=2.5.2"
uuid = { version = "=1.10.0", features = ["serde", "v4"] }
zeroize = "=1.8.1"

[dev-dependencies]
rpc-gateway = { path = "../rpc-gateway" }
tempfile = "=3.12.0"
