[package]
name = "phoenix-engine"
version = "0.4.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"

[lib]
name = "phoenix_engine"
path = "src/lib.rs"

[[bin]]
name = "phoenix-engine"
path = "src/main.rs"

[dependencies]
async-nats = "=0.37.0"
async-trait = "=0.1.81"
chrono = { version = "=0.4.38", features = ["serde"] }
futures-util = "=0.3.31"
hex = "=0.4.3"
phoenix-recorder = { path = "../recorder" }
primitive-types = { version = "=0.12.2", default-features = false }
reqwest = { version = "=0.12.7", default-features = false, features = ["json", "rustls-tls", "stream"] }
rpc-gateway = { path = "../rpc-gateway" }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
sha2 = "=0.10.9"
sqlx = { version = "=0.8.2", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
thiserror = "=1.0.63"
tokio = { version = "=1.40.0", features = ["full"] }
tokio-util = "=0.7.12"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "fmt", "json"] }
