[package]
name = "phoenix-recorder"
version = "0.4.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"

[lib]
name = "phoenix_recorder"
path = "src/lib.rs"

[[bin]]
name = "phoenix-recorder"
path = "src/main.rs"

[[bin]]
name = "shadow-dispatcher"
path = "src/bin/shadow-dispatcher.rs"

[dependencies]
async-nats = "=0.37.0"
async-trait = "=0.1.91"
base64 = "=0.22.1"
chrono = { version = "=0.4.45", features = ["serde"] }
futures-util = "=0.3.33"
hex = "=0.4.3"
money-path-classifier = { path = "../money-path-classifier" }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
sha2 = "=0.10.9"
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
thiserror = "=1.0.63"
tokio = { version = "=1.53.1", features = ["full"] }
tokio-util = "=0.7.19"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
ethabi = "=18.0.0"
