[package]
name = "phoenix-replay"
version = "0.4.0"
edition = "2021"
license = "MIT"

[lib]
name = "phoenix_replay"
path = "src/lib.rs"

[[bin]]
name = "phoenix-replay"
path = "src/main.rs"

[dependencies]
phoenix-engine = { path = "../phoenix-engine" }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
