[package]
name = "rpc-gateway"
version = "0.4.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"

[lib]
name = "rpc_gateway"
path = "src/lib.rs"

[[bin]]
name = "rpc-gateway"
path = "src/main.rs"

[dependencies]
async-trait = "=0.1.81"
futures-util = "=0.3.31"
hex = "=0.4.3"
reqwest = { version = "=0.12.7", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
sha2 = "=0.10.9"
thiserror = "=1.0.63"
tokio = { version = "=1.40.0", features = ["full"] }
tokio-util = "=0.7.12"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "fmt", "json"] }
