[package]
name = "rpc-gateway"
version = "0.4.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"

[lib]
name = "rpc_gateway"
path = "src/lib.rs"

[[bin]]
name = "rpc-gateway"
path = "src/main.rs"

[dependencies]
async-trait = "=0.1.91"
ethabi = "=18.0.0"
futures-util = "=0.3.32"
hex = "=0.4.3"
httpdate = "=1.0.3"
primitive-types = { version = "=0.12.2", default-features = false }
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
sha2 = "=0.10.9"
thiserror = "=1.0.69"
tokio = { version = "=1.53.1", features = ["full"] }
tokio-util = "=0.7.19"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt", "json"] }
